Thu Nov 11 12:42:11 MST 1999	Diego Novillo <dnovillo@cygnus.com>

	* init.c (init_init_processing): Header information for
	arrays allocated via `new' should have the same alignment used by
	malloc.

1999-11-10  Mark Mitchell  <mark@codesourcery.com>

	* error.c (dump_function_name): Don't crash if given a friend
	pseudo-instantiation.

	* cp-tree.h (build_enumerator): Change prototype.
	* decl.c (enum_next_value): Remove.
	(enum_overflow): Likewise.
	(init_decl_processing): Don't register enum_next_value as a root.
	(start_enum): Clear TYPE_VALUES for a redefined enum.
	(finish_enum): Reset the type of enumeration constants.
	(build_enumerator): Fix indentation.  Don't copy CONST_DECLs when
	we don't need to.  Maintain the TYPE_VALUES list and look there
	for the previously defined enumeration constant.  Let enumeration
	constants have the type of their values until the enumeration type
	is complete.
	* parse.y (enumlist_opt, enumlist, enumerator): Don't return a value.
	(structsp): Adjust.
	* parse.c: Regenerated.
	* pt.c (tsubst_enum): Adjust according to build_enumerator changes.
	
Wed Nov 10 12:43:21 1999  Philippe De Muyter  <phdm@macqel.be>
                          Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* cp-tree.h: Test `GCC_VERSION', not `HAVE_GCC_VERSION'.

1999-11-09  Mark Mitchell  <mark@codesourcery.com>

	* cp-tree.h (language_function): Remove x_last_dtor_insn and
	x_last_parm_cleanup_insn.
	* decl.c (last_dtor_insn): Remove.
	(last_parm_cleanup_insn): Likewise.
	(expand_start_early_try_stmts): Don't set them.
	(store_parm_decls): Likewise.
	(save_function_data): Or save them.
	(mark_lang_function): Or mark them.

1999-11-08  Mark Mitchell  <mark@codesourcery.com>

	* decl.c (store_parm_decls): Generate cleanup code at
	semantic-analysis time.  Destroy objects in the correct order.

1999-11-07  Mark Mitchell  <mark@codesourcery.com>

	* cp-tree.h (begin_new_placement): Remove.
	(finish_new_placement): Likewise.